--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         </main>
     
         <footer><!--footer details-->
-            <p>Contact us at: <a href="mailto:info@example.com">info@example.com</a></p>
-            <p>Follow us on social media: 
+            <p><p class="contact">Contact us at:</p>
+            <a href="mailto:info@example.com">info@example.com</a></p>
+            <p><p class="contact"></p>Follow us on social media: 
                 <a href="https://facebook.com/yourprofile" target="_blank">facebook<!--facebook icon-->
                     <i class="fab fa-facebook"></i>
                   </a> | 
