my week 3 assignment

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <footer><!--footer details-->
             <p><p class="contact">Contact us at:</p>
             <a href="mailto:info@example.com">info@example.com</a></p>
-            <p><p class="contact"></p>Follow us on social media: 
+            <p><p class="contact">Follow us on social media:</p> 
                 <a href="https://facebook.com/yourprofile" target="_blank">facebook<!--facebook icon-->
                     <i class="fab fa-facebook"></i>
                   </a> | 
