--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
         </main>
     
         <footer><!--footer details-->
-            <p><p class="contact">Contact us at:</p>
-            <a href="mailto:info@example.com">info@example.com</a></p>
-            <p><p class="contact">Follow us on social media:</p> 
+            <p><p class="contact">Contact us at:</p> <a href="mailto:info@example.com">info@example.com</a></p>
+            <p ><P class="contact">Follow us on social media:</P> 
                 <a href="https://facebook.com/yourprofile" target="_blank">facebook<!--facebook icon-->
                     <i class="fab fa-facebook"></i>
-                  </a> | 
+                  </a>  | 
                   <a href="https://twitter.com/yourprofile" target="_blank"> X <!--twitter-->
                     <i class="fab fa-twitter"></i>
                   </a>
